fix: change vh and vw by % for background, so that no horizontal scroll appears

--- a/nonograms/src/styles/css/main.css
+++ b/nonograms/src/styles/css/main.css
@@ -46,8 +46,8 @@ body {
 
 .main-background {
   position: absolute;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   opacity: 0.1;
   background: #000;
   filter: blur(2px);
