--- a/nonograms/src/styles/sass/base/_base.scss
+++ b/nonograms/src/styles/sass/base/_base.scss
@@ -3,7 +3,7 @@
 }
 
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 24px;
   font-weight: 400;
   line-height: 30px;
@@ -11,8 +11,8 @@ body {
 
 .main-background {
   position: absolute;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   opacity: 0.1;
   background: #000;
   filter: blur(2px);
